fix: update dropdown position calculation
Prevents the dropdown overlapping when the spacing is greater than zero

--- a/src/components/dropdown/theme.css
+++ b/src/components/dropdown/theme.css
@@ -3,5 +3,20 @@
   box-shadow: 0px 2px 2px 2px var(--dropdown-shadow-color);
   border-color: var(--dropdown-border-color);
   border-radius: var(--dropdown-border-radius);
+}
+
+.hx-dropdown-up {
+  margin-bottom: var(--dropdown-spacing);
+}
+
+.hx-dropdown-down {
   margin-top: var(--dropdown-spacing);
+}
+
+.hx-dropdown-left {
+  margin-right: var(--dropdown-spacing);
+}
+
+.hx-dropdown-right {
+  margin-left: var(--dropdown-spacing);
 }
